===v6.2.2===
 * Buff/Debuff icons can now sort by stacks.
 * Added a few more popup notifications when invalid settings/actions are entered/performed.
 * Icons will now be automatically enabled when you select an icon type.
 * Incorporated LibDogTag-Stats-3.0 into TellMeWhen's various implementations of LibDogTag-3.0.
 * The Mastery condition now uses GetMasteryEffect() instead of GetMastery(). The condition will now be comparable to the total percentage increase granted by mastery instead of the value that has to be multiplied by your spec's mastery coefficient (which is no longer shown in Blizzard's character sheet.)
 * TMWOptDB now uses AceDB-3.0. One benefit of this is that the suggestion list will now always be locale-appropriate.
 * The suggestion list for units is now much more useful.
 * The suggestion list now has a warning in the tooltip when inserting spells that interfere with the names of equivalencies.
 * The suggestion list now pops up a help message the first time it is shown.
 * The group sorting option to sort by duration now treats spells that are on the GCD as having no cooldown.
 * You can now copy an icon's events and conditions by right-click-dragging the icon to another icon.
 ** You can also copy group conditions between groups this way.
 * When right-click-dragging an icon to an icon that has multiple icons in the same place, you can now choose which one you would like the destination to be.


 * Bug Fixes:
 ** Buff/Debuff icons that are set to sort by low duration should now properly display unlimited duration auras when there is nothing else to display.
 ** The Ranged Attack Power condition should now always use the proper RAP value.
 ** Fixed some "You are not in a raid group" errors.