@@ -23,9 +23,13 @@ local print = TMW.print
 local TimerBar_BarDisplay = TMW:NewClass("IconModule_TimerBar_BarDisplay", "IconModule_TimerBar")
 
 TimerBar_BarDisplay:RegisterIconDefaults{
-	BarDisplay_Invert		= false,
-	BarDisplay_BarGCD		= false,
-	BarDisplay_FakeMax		= 0,
+	BarDisplay_Invert			= false,
+	BarDisplay_BarGCD			= false,
+	BarDisplay_FakeMax			= 0,
+	BarDisplay_StartColor		= { r=1, g=0, b=0, a=1 },
+	BarDisplay_MiddleColor		= { r=1, g=1, b=0, a=1 },
+	BarDisplay_CompleteColor	= { r=0, g=1, b=0, a=1 },
+	BarDisplay_EnableColors		= false,
 }
 
 TimerBar_BarDisplay:RegisterConfigPanel_XMLTemplate(210, "TellMeWhen_BarDisplayBarOptions")
@@ -34,15 +38,24 @@ function TimerBar_BarDisplay:SetupForIcon(sourceIcon)
 	self.Invert = sourceIcon.BarDisplay_Invert
 	self.BarGCD = sourceIcon.BarDisplay_BarGCD
 	self.Offset = 0
+
 	if self.Invert or sourceIcon.BarDisplay_FakeMax == 0 then
 		self.FakeMax = nil
 	else
 		self.FakeMax = sourceIcon.BarDisplay_FakeMax
 	end
-	if not sourceIcon.typeData then
-		error("sourceIcon.typeData was nil. Why did this happen? (Please tell Cybeloras)")
+
+	if sourceIcon.BarDisplay_EnableColors then
+		self:SetColors(
+			sourceIcon.BarDisplay_StartColor,
+			sourceIcon.BarDisplay_MiddleColor,
+			sourceIcon.BarDisplay_CompleteColor)
+	else
+		self:SetColors(
+			sourceIcon.typeData.Colors.CBS,
+			sourceIcon.typeData.Colors.CBM,
+			sourceIcon.typeData.Colors.CBC)
 	end
-	self:SetColors(sourceIcon.typeData.Colors.CBS, sourceIcon.typeData.Colors.CBC)--TODO: this module needs the option to be able to color itself
 	
 	self:UpdateValue(1)
 end
@@ -51,7 +64,7 @@ TimerBar_BarDisplay:SetIconEventListner("TMW_ICON_SETUP_POST", function(Module, 
 	if TMW.Locked then
 		Module:UpdateTable_Register()
 		
-		Module.bar:SetAlpha(.9)
+		Module.bar:SetAlpha(.95)
 	else
 		Module:UpdateTable_Unregister()
 		
